# acheron

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
src/Core/: ClientInstance.cpp  ClientInstance.hpp  ImageManager.cpp  ImageManager.hpp  JsonUtils.hpp  Logging.cpp  Logging.hpp  MessageManager.cpp  MessageManager.hpp  PermissionComputer.cpp  PermissionComputer.hpp  PermissionManager.cpp  PermissionManager.hpp  ReadStateManager.cpp  ReadStateManager.hpp  Session.hpp
src/Core/AV/: AudioMixer.cpp  AudioMixer.hpp  AudioPipeline.cpp  AudioPipeline.hpp  IAudioBackend.cpp  IAudioBackend.hpp  JitterBuffer.cpp  JitterBuffer.hpp  MiniaudioAudioBackend.cpp  MiniaudioAudioBackend.hpp  OpusDecoder.cpp  OpusDecoder.hpp  OpusEncoder.cpp  OpusEncoder.hpp  VoiceManager.cpp  VoiceManager.hpp
src/Core/Markdown/: Parser.cpp  Parser.hpp
src/Discord/: Client.cpp  Client.hpp  ClientIdentity.cpp  ClientIdentity.hpp  CurlUtils.cpp  CurlUtils.hpp  Entities.hpp  Enums.hpp  Events.hpp  Gateway.cpp  Gateway.hpp  HttpClient.cpp  HttpClient.hpp  Objects.hpp  Outbound.hpp
src/Discord/AV/: DaveSession.cpp  DaveSession.hpp  RtpPacket.cpp  RtpPacket.hpp  UdpTransport.cpp  UdpTransport.hpp  VoiceClient.cpp  VoiceClient.hpp  VoiceEncryption.hpp  VoiceEntities.hpp  VoiceGateway.cpp  VoiceGateway.hpp
src/Storage/: ChannelRepository.cpp  ChannelRepository.hpp  DatabaseManager.cpp  GuildRepository.cpp  GuildRepository.hpp  MessageRepository.cpp  MessageRepository.hpp  RoleRepository.cpp  RoleRepository.hpp
src/UI/: ImageViewer.cpp  ImageViewer.hpp  MainWindow.cpp  MainWindow.hpp  TypingIndicator.cpp  VoiceWindow.cpp  VoiceWindow.hpp
src/UI/ChannelList/: ChannelDelegate.cpp  ChannelFilterProxyModel.cpp  ChannelFilterProxyModel.hpp  ChannelNode.hpp  ChannelTreeModel.cpp  ChannelTreeModel.hpp  ChannelTreeView.cpp  ChannelTreeView.hpp
src/UI/Chat/: ChatDelegate.cpp  ChatLayout.cpp  ChatLayout.hpp  ChatModel.cpp  ChatModel.hpp  ChatView.cpp  ChatView.hpp
src/UI/Dialogs/: BasePopup.cpp  BasePopup.hpp  ConfirmPopup.cpp  ConfirmPopup.hpp
src/UI/Input/: MessageInput.cpp
src/UI/TabBar/: TabBar.cpp  TabBar.hpp
